libs/@local/hashql/hir/tests/ui/reify/list.jsonc
//@ run: fail
//@ description: Confirms the error reporting for list literals which are not yet implemented in the reification phase.
{ "#list": [{ "#literal": 2 }] }
//~^ ERROR `list literal` not supported yet
